--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,12 @@
-PORT=5000
+PORT=5001
 MONGODB_URI=mongodb://localhost:27017/gobd-vault
 JWT_SECRET=your-secret-key-change-in-production
 NODE_ENV=development
 UPLOAD_DIR=./uploads
+
+# Email Service Configuration
+
+EMAIL_SERVICE=gmail
+EMAIL_USER=abhaysinghpatel001@gmail.com
+EMAIL_PASSWORD=xiaikbzpuzimgeuv
+EMAIL_FROM="GoBD Digital Vault <abhaysinghpatel001@gmail.com>"
