--- a/backend/package.json
+++ b/backend/package.json
@@ -8,20 +8,26 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["gobd", "archive", "compliance", "worm"],
+  "keywords": [
+    "gobd",
+    "archive",
+    "compliance",
+    "worm"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "archiver": "^6.0.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
-    "cors": "^2.8.5",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
-    "archiver": "^6.0.1",
-    "xml-js": "^1.6.11",
-    "express-rate-limit": "^7.1.5"
+    "nodemailer": "^7.0.12",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
